[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://tower/Crystal.gd" type="Script" id=2]
[ext_resource path="res://tower/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Cannon.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Shoot Melon.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 8.0

[node name="Crystal" type="StaticBody2D"]
script = ExtResource( 2 )
bullet_scene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )
hframes = 10
vframes = 10
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -4 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ShootingOffset" type="Position2D" parent="."]
position = Vector2( 8, 0 )

[node name="SpawnSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
